Minor Layout issues FIXED

--- a/app/checkout/CheckoutPage.scss
+++ b/app/checkout/CheckoutPage.scss
@@ -25,9 +25,20 @@
     }
   }
 
+  &__logo {
+    color: $color-primary-white;
+    text-align: left;
+    margin-left: 2.8rem;
+
+    @include desktop {
+      margin-left: 4.4rem;
+      margin-top: 4.4rem;
+    }
+  }
+
   &__title {
     color: $color-primary-white;
-    font-size: 2rem;
+    // font-size: 2rem;
     margin-bottom: $padding-big;
 
     @include desktop {
@@ -42,6 +53,9 @@
     color: $color-primary-white;
     margin-right: $spacing-small;
     margin-bottom: $spacing-small;
+    padding-top: 2rem;
+    // margin: $spacing-small;
+    // margin-left: 0;
     @include flexbox(column, center, center);
 
     @include desktop {
@@ -93,6 +107,7 @@
 
     &__input {
       height: 2rem;
+      width: 45vw;
       font-size: 1rem;
       background-color: $color-primary-green;
       border: $divider-width solid $color-secondary-black;
@@ -108,6 +123,10 @@
 
       &:focus {
         outline: $color-secondary-black;
+      }
+
+      @include desktop {
+        width: 12vw;
       }
     }
 
