--- a/app/games/ps/[id]/PlaystationProductDetailsPage.scss
+++ b/app/games/ps/[id]/PlaystationProductDetailsPage.scss
@@ -33,6 +33,7 @@
     &__title {
       @include desktop {
         text-align: center;
+        margin-bottom: $padding-big;
       }
     }
   }
@@ -57,11 +58,20 @@
       color: $color-primary-white;
       line-height: 40px;
       font-weight: 500;
+
+      @include desktop {
+        margin-bottom: $padding-big;
+      }
     }
 
     &__title {
       color: $color-primary-white;
       width: 28rem;
+
+      @include desktop {
+        width: 51rem;
+        margin-bottom: $padding-big;
+      }
     }
 
     //NOTE custom cursor with image as example
@@ -93,11 +103,19 @@
       color: $color-primary-white;
       line-height: 40px;
       font-weight: 500;
+
+      @include desktop {
+        margin-bottom: $padding-big;
+      }
     }
 
     &__title {
       color: $color-primary-white;
       //   width: 10rem;
+
+      @include desktop {
+        margin-bottom: $padding-small;
+      }
     }
 
     &__radio {
@@ -230,6 +248,20 @@
 
   &-gallery {
     @include flexbox(column, center, center);
+
+    @include desktop {
+      width: 100vw;
+      // height: 60rem;
+
+      @include flexbox(row, space-evenly, flex-start);
+      flex-wrap: wrap;
+
+      &__image {
+        width: 49vw;
+        object-fit: cover;
+        margin-bottom: $padding-small;
+      }
+    }
   }
 
   &-carousel {
