--- a/app/styles/partials/_typography.scss
+++ b/app/styles/partials/_typography.scss
@@ -35,7 +35,8 @@
 .ps-hero__logo,
 .xbox-hero__logo,
 .ps-game-header__logo,
-.xbox-game-header__logo {
+.xbox-game-header__logo,
+.checkout__logo {
   font-size: $mob-font-logo;
   // line-height: 2.3rem;/
   font-weight: 600;
